# libavaudiosink

./: Makefile.am  README.md  configure.ac  libavaudiosink.pc.in
include/: Makefile.am
include/avaudiosink/: AERingBuffer.h  avaudiosink.h
lib/: Makefile.am  libavaudiosink.c  libavaudiosink.syms
